mule-user-guide/v/3.8/installing-an-enterprise-license.adoc
= 安装企业许可证
:keywords: mule, studio, enterprise, ee, premium features, paid features, purchase, license, licensed

为了评估目的，MuleSoft提供了企业版运行时的试用版本。虽然适合探索Mule，Anypoint Studio和Mule管理控制台的无数用途，但Enterprise的试用许可限制了运行时的使用。完成以下步骤以获取并安装*Enterprise license*，然后在生产环境中开始使用Mule运行时。

.  mailto：info@mulesoft.com [联系MuleSoft]以`license.lic`文件的形式获取*Enterprise license*。
. 在安装之前，建议从您的`$MULE_HOME`目录中删除先前的许可证。为此，请导航至`$MULE_HOME/conf/`并删除现有的`muleLicenseKey.lic`文件。
. 如果您要在多个平台上安装许可证，请在继续操作之前在其他位置备份新的`license.lic`文件。
. 确保Mule服务器是*stopped (not running)*，然后在系统上打开终端或命令行。
. 在*Mac/Unix/Linux*上，从`$MULE_HOME/bin`目录运行以下命令：
+
`mule -installLicense ~/license.lic` +
 +
在*Windows*上，首先将`license.lic`文件复制到\ bin文件夹中，然后在命令行中执行以下操作：+
 +
`mule -installLicense license.lic `
. 在`$MULE_HOME/conf`目录中，Mule会保存一个名为`muleLicenseKey.lic`的新文件。这表明许可证已安装。
.  *Start*您的Mule服务器再次通过常规方式。
+


== 验证或删除Enterprise Edition许可证

确保Mule服务器是*stopped (not running)*，然后在系统上打开终端或命令行。

要验证Mule是否已成功安装企业许可证，请运行以下命令：

`mule -verifyLicense`

要卸载以前安装的许可证，请运行以下命令：

`mule -unInstallLicense`

有时许可安装会失败，可能需要手动删除`$MULE_HOME/conf/muleLicenseKey.lic`


== 下载您的许可证密钥文件

* 登录到支持门户 link:https://support.mulesoft.com[这里]。如果您没有登录凭据，请联系您的客户成功经理。

* 点击位于支持门户主页顶部的"Subscriptions"标签。

* 点击您希望获得许可密钥的订阅的"Subscription Name"。请注意，您必须点击"Subscription Name"（右侧第二栏），否则您将无法转发到正确的页面。

* 点击页面左下方的"License ID"号码。

* 点击"View"按钮下载您的许可证密钥。


== 在嵌入式Mule服务器上安装企业许可证

尽管不建议在生产环境中使用，但您可以选择在Mule Studio中捆绑的嵌入式Mule Server上安装Enterprise许可证。

. 使用Mule管理控制台和企业版运行时下载并安装Mule。
.  mailto：info@mulesoft.com [联系MuleSoft]以`license.lic`文件的形式获取*Enterprise Edition license*。
. 完成上述步骤以在您的Mule独立运行时上安装新许可证。
. 从`$MULE_HOME/conf`目录复制Mule存储的新许可证文件：`muleLicenseKey.lic`
. 将`muleLicenseKey.lic`文件粘贴到Mule嵌入式应用程序的类路径中。

== 安装产品许可证

要使用SAP连接器和高可用性群集，您必须首先获取并安装产品许可证。 mailto：info@mulesoft.com [联系MuleSoft]获取上述产品之一的许可证。

[TIP]
link:https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/[MuleSoft Enterprise Maven客户存储库]允许您访问未包含在试用版或社区版本中的Mule Enterprise模块，连接器和其他组件。有关详细信息，请参阅 link:/mule-user-guide/v/3.8/configuring-maven-to-work-with-mule-esb[配置Maven以使用Mule]。

== 另请参阅

* 开始学习 link:/mule-user-guide/v/3.8/mule-concepts[关键概念]。
* 详细了解 link:/mule-management-console/v/3.7[Mule管理控制台]。
带有插件，模块，运行时和连接器的*  link:/anypoint-studio/v/6/installing-extensions[延长骡子]。
